# energy-market-deep-learning

./: .floydexpt  .floydignore  .gitignore  PRICE_AND_DEMAND_201701_QLD1.csv  Pipfile  Procfile  adversarial.sh  aemo.sh  aemo_config.py  cartpole.py  config.py  ddpg_MarketEnv-v0_weights_actor.h5f  ddpg_MarketEnv-v0_weights_critic.h5f  dqn_CartPole-v0_weights.h5f  dqn_MarketEnv-v0_weights.h5f  dqn_MultiBidMarket-v0_GEN_1_weights.h5f  dqn_MultiBidMarket-v0_GEN_2_weights.h5f  dqn_MultiBidMarketEfficient-v0_GEN_1_weights.h5f  dqn_MultiBidMarketEfficient-v0_GEN_2_weights.h5f  dqn_SimpleMarket-v0_weights.h5f  dqn_adversarial.py  dqn_aemo.py  dqn_cartpole.py  dqn_simplemarket.py  electricity_market.py  env-tester.py  floyd-run.sh  floyd_example.sh  floyd_requirements.txt  generators.py  local.env.sh  logbook_tester.py  main.py  main_naf.py  market_config.py  ml_interfaces.py  permutations.py  post_from_logbook_file.py  pyproject.toml  readme.md  (+15 more)
data/input/: PRICE_AND_DEMAND_201901_TAS1.csv
legacy/: Pipfile  cdqn_MarketEnv-v0_weights.h5f  config.py  env-tester.py  generators.py  hotter_colder.py  main.py  main_sarsa.py  ml_interfaces.py  run.sh  ws_market_sim.py
legacy/keras-rl/: dqn_CartPole-v0_weights.h5f  duel_dqn_CartPole-v0_weights.h5f
legacy/market_env/: market_env.py
market_env/: __init__.py  market_env.py
marketsim/io/: run_servers.sh
marketsim/model/: demand.py  (+2 more)
pickles/: 2018-06-05T00:00:00+00:002018-06-06T00:00:00+00:00NSW.pkl
static/: monitor.css  monitor.html  monitor.js  package.json
web-ui/: monitor.css  monitor.html  monitor.js  package-lock.json
(+20 files in other folders)
